Fix justify-content center display bug on tablet

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -729,6 +729,10 @@ section {
     }
   }
 
+  .flip-card-row {
+    justify-content: center;
+  }
+
 }
 
 @media (min-width: 992px) {
